--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <title>PortafoliosSoftwareNacho</title>
-
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.js""></script>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-      <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
-
-
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-
 
 <div class="container-fluid">
   <!-- Header -->
@@ -33,14 +30,16 @@
   <!-- About me -->
 	<div class="row" style="margin-top:150px;" id="about">
     <div class="class-md-12">
-      <h1 class="text-center blue-font ubuntu">Página profesional de <b>Nacho Betancourt</b></h1>
+      <h1 class="text-center blue-font ubuntu">Portafolio web de <b>Nacho Betancourt</b></h1>
     </div>
-		<div class="col-md-9 text-right top" style="margin-top:70px;">
+		<div class="col-md-9 text-right top" style="margin-top: 70px;">
       <p>Ingeniero en Desarrollo de Software titulado por el TecMilenio, apasionado por la enseñanza y difusión de la programación, he trabajado en contabilidad y construcción, pase por las carreras de Arquitectura e Ingeniería Civil, antes de encontrar en la programación mi verdadera pasión.</p>
-      <p>Actualmente trabajo desarrollando aplicaciones web en <span style="color:#EC1622;">Ruby on Rails</span> para <span class="codea-y">{</span><span class="codea-b">Codea</span>Camp<span class="codea-y">}</span> escuela de desarrollo web y programación en la CDMX, he trabajado con PHP y Java, inclinado al backend, pero entusiasta del diseño de UI/UX, trabajo también en planeación de proyectos y análisis de datos</p>
-      <p>Me gustan los perros, la pizza, los camellones de la Ciudad de México, las playas de Veracruz, las carreteras y el viento en la cara, me gusta nadar y caminar, apoyo fielmente al <span class="codea-b">Cruz Azul</span> y a los <span style="color:red;">Tiburones Rojos</span>, leo libros y cómics, escucho música, pero para mi no hay nada como el placer de escribir y crear constantemente código</p>
+      <p>Mi primer trabajo fue desarrollando aplicaciones web usando <span style="color:#EC1622;">Ruby on Rails</span> y <span class="codea-y">JS</span> avanzado en <span class="codea-y">{</span><span class="codea-b">Codea</span>Camp<span class="codea-y">}</span> escuela de desarrollo web y programación en la CDMX, con un enfoque a la plataforma de alumnos, mejorando la experiencia de usuario con el objetivo de conseguir mejores experiencias de aprendizaje, también la plataforma interna la cual recibió mejoras de usabilidad para que nuestros maestros y los vendedores pudieran hacer un uso más eficiente de la misma.</p>
+      <p>Mi siguiente experiencia profesional fue haciendo uso avanzado de <span style="color: #C1002F;">Angular</span> en <span style="color: #721D91;">iVoy</span>, empresa de lógistica donde adquirí amplia experiencia consumiendo servicios web, desarrollando una remodelación visual de su plataforma enfocada en la responsividad y una mejora del flujo de la aplicación para nuestros clientes, mi trabajo más profundo fue en el CMR donde logré trabajar de manera avanzada con la API de Google Maps.</p>
+      <p>También he trabajado con React, Python, PHP y Java, me considero un desarrolador Fullstack, me entusiasma el diseño de UI/UX pues considera la experiencia de un usuario uno de los elementos más importantes de mi carrera, trabajo también en planeación de proyectos y análisis de datos</p>
+      <p>Me gustan los perros, la pizza, los camellones de la Ciudad de México, las playas de Veracruz, las carreteras y el viento en la cara, me gusta nadar y caminar, apoyo fielmente al <span class="codea-b">Cruz Azul</span>, leo libros y cómics, escucho música, pero para mi no hay nada como el placer de escribir y crear constantemente código.</p>
 		</div>
-		<div class="col-md-3 top">
+		<div class="col-md-3 top goku">
       <img src="http://res.cloudinary.com/hmaajhluc/image/upload/c_crop,h_479,w_479,x_0,y_0/v1483973328/82.jpg" alt="Nacho Betancourt" class="img-responsive round" style="height:200px;"/>
 		</div>
 	</div>
@@ -52,11 +51,35 @@
     </div>
 
     <div class="row">
+      <!-- Medvent -->
+      <div class="col-md-6 top">
+        <div class="thumbnail">
+          <img class="img-responsive" src="https://i.imgur.com/H8ef173.png?2" alt="Medvent">
+          <div class="caption">
+            <h3>Medvent</h3>
+            <p class="small-f">Plataforma de venta en línea personalizada de productos farmaceuticos desarrollada de manera progresiva, lo que permite su uso como página web y como aplicación movil, así como uso de servicios offline para el cliente, incluye un panel de administración donde el administrador puede añadir productos y promociones, consultar las existencias y pedidos. El cliente puede seleccionar sus elementos en un carrito desde el es posible también realizar el pago gracias a la integración de Sr. Pago.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Clearview -->
+      <div class="col-md-6 top">
+        <div class="thumbnail">
+          <img class="img-responsive" src="https://i.imgur.com/sFTIceO.png" alt="Clearview">
+          <div class="caption">
+            <h3>Clearview</h3>
+            <p class="small-f">Clearview es un proyecto enfocado en mejorar el proceso de trabajo de los desarrolladores de software con clientes, muestra diferentes secciones que permitirán al cliente tener la confianza de que su proyecto está avanzando y siendo trabajado día, mostrando el status y objetivos del mismo, así como las horas trabajadas por cada desarrollador, está desarrollado en Ruby on Rails usando la API de Teamwork como fuente.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+
       <!-- ProjectFS -->
       <div class="col-md-6 top">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/7LDul1k.png?1" alt="Project FS in game">
-          <img src="http://i.imgur.com/olhWIed.png?1" alt="Project FS player select screen">
+          <img class="img-responsive" src="http://i.imgur.com/7LDul1k.png?1" alt="Project FS in game">
+          <img class="img-responsive" src="http://i.imgur.com/olhWIed.png?1" alt="Project FS player select screen">
           <div class="caption">
             <h3>Project FS</h3>
             <p class="small-f">Fantasy Soccer fue mi proyecto final del bootcamp intensivo de programación, utilizando la base de datos de EA de los juegos de Fifa se creó una base de datos con la cual los usuarios pueden armar sus propios equipos con un presupuesto inicial y correr simulaciones de partidos contra sus amigos para ganar más dinero, la simulación de los partidos se creo con un algoritmo de más de 1mil líneas de código que itera más de 500 veces por partido y genera cada movimiento del juego considerando las habilidad, la posición en el campo y otras muchas variables.</p>
@@ -67,11 +90,12 @@
           </div>
         </div>
       </div>
+
       <!-- CodeaProposals -->
       <div class="col-md-6 top" style="height:100%;">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/cT03rqF.png" alt="CodeaProposals proposals">
-          <img src="http://i.imgur.com/Ws7DFLG.png?1" alt="CodeaProposals show">
+          <img class="img-responsive" src="http://i.imgur.com/cT03rqF.png" alt="CodeaProposals proposals">
+          <img class="img-responsive" src="http://i.imgur.com/Ws7DFLG.png?1" alt="CodeaProposals show">
           <div class="caption">
             <h3>CodeaProposals</h3>
             <p class="small-f">Proyecto de propuestas que integra vía twitter la oportunidad de sugerir y agregar a las celebridades o artistas favoritos a una base de datos que los cuenta como votos para la generación de listas de invitados en diferentes eventos,este servicio se utilizó como parte de talleres en TagCDMX, CampusParty y para CódigoX iniciativa de la presidencia de la Republica, enseñando a los asistentes a desarrollar a una aplicación cliente donde mandan propuestas a esta.</p>
@@ -82,14 +106,63 @@
           </div>
         </div>
       </div>
+
+    </div>
+
+    <!-- iVoy -->
+    <div class="row">
+      <div class="col-md-6 top">
+        <div class="thumbnail">
+          <div class="together">
+            <img class="img-responsive" style="width: 29%;" src="https://i.imgur.com/svKt2MH.png" alt="iVoy">
+            <img class="img-responsive" style="width: 69%;" src="https://i.imgur.com/ZxqfH5T.png" alt="iVoy">
+          </div>
+          <div class="caption">
+            <h3>iVoy - responsivo</h3>
+            <p class="small-f">Estuve a cargo del desarrollo de una remodelación visual de la plataforma para clientes de iVoy donde el enfoque principal fue su uso desde dispositivos moviles con responsividad para diversas plataformas desde celulares con pantalla pequeña hasta tablets y iPads, se mejoro también el flujo de la aplicación para funcionar en sólo 2 pasos en lugar de los anteriores 4.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 top">
+        <div class="thumbnail">
+          <img class="img-responsive" src="https://i.imgur.com/tE869j4.png" alt="iVoy">
+          <div class="caption">
+            <h3>iVoy - busqueda de paquetes</h3>
+            <p class="small-f">Este es un servicio que desarrollé con el objetivo de ayudar a la gente de almacen a escanear desde una computadora o celular el código QR o de barras de un paquete usando la camara de la misma, haciendo en el momento una conexión con los servidores que les permite saber la información completa del mismo, permitiendo también organizar por órden</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 top">
+        <div class="thumbnail">
+          <img class="img-responsive" src="https://i.imgur.com/5tmenQT.png" alt="iVoy">
+          <div class="caption">
+            <h3>iVoy - mapa de paquetes</h3>
+            <p class="small-f">Haciendo uso del API de google maps se realizó un mapa que muestra en tiempo real los paquetes con fácil identificación de color para sus diferentes estados, permitiendo también generar órdenes con los mismos seleccionando directamente en el mapa, lo que permite a los supervisores crear de manera más optima las rutas para los motociclistas.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 top">
+        <div class="thumbnail">
+          <img class="img-responsive" src="https://i.imgur.com/NIlbW9R.png" alt="iVoy">
+          <div class="caption">
+            <h3>iVoy - zonas de alta demanda</h3>
+            <p class="small-f">Este servicio permite establecer zonas con precios preferentes para los mensajeros, permitiendo crear poligonos en el mapa, establecer los días y horarios aplicables a los mismos.</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="row">
       <!-- Codea Spots -->
       <div class="col-md-6 top">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/9msCqbL.png?1" alt="CodeaSpots mockup">
-          <img src="http://i.imgur.com/qAhuasR.png?1" alt="CodeaSpots complete">
+          <img class="img-responsive" src="http://i.imgur.com/9msCqbL.png?1" alt="CodeaSpots mockup">
+          <img class="img-responsive" src="http://i.imgur.com/qAhuasR.png?1" alt="CodeaSpots complete">
           <div class="caption">
             <h3>CodeaSpots</h3>
               <p class="small-f">Mi primera aplicación independiente para <span class="codea-y">{</span><span class="codea-b">Codea</span>Camp<span class="codea-y">}</span>, sistema de distribución de lugares que utilizando un microservicio, que también desarrollé, que se comunica con la plataforma de estudio para obtener los alumnos inscritos en la escuela, permitiendo enlistarlos y por medio de objetos arrastrables añadirlo dinámicamente a sus asientos, considerando su horario de estudio, aplicación de uso interno, en la primera foto se puede ver el proceso de diseño y en la segunda el resultado final.</p>
@@ -99,8 +172,8 @@
       <!-- OliNacho -->
       <div class="col-md-6 top" style="height:100%;">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/x1bZu1G.png" alt="OliNacho inicio de sesión">
-          <img src="http://i.imgur.com/qWPs8ey.png?1" alt="OliNacho por dentro">
+          <img class="img-responsive" src="http://i.imgur.com/x1bZu1G.png" alt="OliNacho inicio de sesión">
+          <img class="img-responsive" src="http://i.imgur.com/qWPs8ey.png?1" alt="OliNacho por dentro">
           <div class="caption">
             <h3>OliNacho</h3>
             <p class="small-f">Aplicación de uso personal que simula una red social con un número limitado de miembros, lo que permite una comunicación exclusiva entre padres e hijos, permite compartir textos, subir fotos o añadirlas de un link externo, compartir videos de youtube, reaccionar a los posts y comentar en los mismos, pero sobretodo brinda un espacio único y de confianza para fortalecer la comunicación.</p>
@@ -113,8 +186,8 @@
       <!-- Locomotion -->
       <div class="col-md-6 top">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/mdycor3.png" alt="Locomotion daily_reports">
-          <img src="http://i.imgur.com/WMLTCxk.png" alt="Locomotion worklogs">
+          <img class="img-responsive" src="http://i.imgur.com/mdycor3.png" alt="Locomotion daily_reports">
+          <img class="img-responsive" src="http://i.imgur.com/WMLTCxk.png" alt="Locomotion worklogs">
           <div class="caption">
             <h3>Locomotion</h3>
               <p class="small-f">Múltiples funciones nuevas para la plataforma de cursos de <span class="codea-y">{</span><span class="codea-b">Codea</span>Camp<span class="codea-y">}</span>, en las imágenes se aprecia primero el sistema de reportes diarios que evalúa a los alumnos en cuanto a sus condiciones de trabajo, horarios de entrada y de salida, etc. El segundo es el sistema de seguimiento a las actividades de los alumnos, el cual cuenta con logs automatizados y manuales que nos ayudan a medir el desempeño y hacer métricas con el objetivo de mejorar el servicio de la escuela. </p>
@@ -124,8 +197,8 @@
       <!-- Otros -->
       <div class="col-md-6 top" style="height:100%;">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/qAblTUA.png?1" alt="Diseño de landing pages">
-          <img src="http://i.imgur.com/OPwwV1U.png?2" alt="Integración de sistemas">
+          <img class="img-responsive" src="http://i.imgur.com/qAblTUA.png?1" alt="Diseño de landing pages">
+          <img class="img-responsive" src="http://i.imgur.com/OPwwV1U.png?2" alt="Integración de sistemas">
           <div class="caption">
             <h3>Otros...</h3>
             <p class="small-f">
@@ -140,7 +213,7 @@
 
 
 	<div id="contact" class="row top">
-		<div class="col-md-4 col-md-offset-1 text-center">
+		<div class="col-md-4 col-md-offset-1 text-center" style="display: flex; flex-direction: column; justify-content: center;">
       <img src="http://i.imgur.com/LpOmQeb.png?3" alt="work work work work work" class="img-responsive round" />
       <h7 class="codea-b" style="margin-top:25px;">"First solve the problem, then write the code"</h7>
       <h6 class="blue-font"  style="margin-top:15px;">Programada con <span class="fa fa-heart codea-y"></span> por Nacho Betancourt</h6>
@@ -164,9 +237,7 @@
 
 </div>
 
-<script src='https://use.fontawesome.com/bddacb7098.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
-
 
 </body>
 </html>
