--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3>Coleccionista</h3>
             <p class="small-f">Ésta una aplicación web que desarrollé como hobby con mi hijo, para explicarle algunos conceptos básicos de la programación web, con la euforía del mundial de futbol y la necesidad de intercambiar barajitas para llenar el álbum. Usando los recursos mínimos para su uso con datos móviles al intercambiar en Bellas Artes y ver de manera rápida nuestras repetidas usando filtros y actualizar en tiempo real las que conseguiamos, todo el procesamiento es invisible para el usuario final ya que guarda usando una API propia, no necesita iniciar sesión</p>
             <div class="text-center">
-              <a href="https://softwarenacho.github.io/collector/" class="btn btn-info" role="button">Coleccionista</a>
+              <a target="blank" href="https://softwarenacho.github.io/collector/" class="btn btn-info" role="button">Coleccionista</a>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <h3>Trivia</h3>
             <p class="small-f">Demostración de consumo de API's externas usando un mínimo de recursos, usando JS se obtiene una base de preguntas en diferentes categorías para después contestarlas en una interfaz simple e intuitiva pensada en una fácil experiencia de usuario con el objetivo de conectarla por medio de dispositivos como Chromecast a televisiones, así como su uso como una aplicación web progresiva lo que me permite guardar bases de preguntas como favoritas para su uso offline, desarrollo en proceso con Angular.</p>
             <div class="text-center">
-              <a href="https://softwarenacho.github.io/trivia/" class="btn btn-info" role="button">Trivia</a>
+              <a href="https://softwarenacho.github.io/trivia/" class="btn btn-info" target="blank" role="button">Trivia</a>
             </div>
           </div>
         </div>
@@ -90,8 +90,8 @@
             <h3>Project FS</h3>
             <p class="small-f">Fantasy Soccer fue mi proyecto final del bootcamp intensivo de programación, utilizando la base de datos de EA de los juegos de Fifa se creó una base de datos con la cual los usuarios pueden armar sus propios equipos con un presupuesto inicial y correr simulaciones de partidos contra sus amigos para ganar más dinero, la simulación de los partidos se creo con un algoritmo de más de 1mil líneas de código que itera más de 500 veces por partido y genera cada movimiento del juego considerando las habilidad, la posición en el campo y otras muchas variables.</p>
             <div class="text-center">
-              <a href="https://project-fs.herokuapp.com/" class="btn btn-info" role="button">ProjectFS</a>
-              <a href="https://project-fs.herokuapp.com/register" class="btn btn-primary" role="button">Registro</a>
+              <a href="https://project-fs.herokuapp.com/" class="btn btn-info" target="blank" role="button">ProjectFS</a>
+              <a href="https://project-fs.herokuapp.com/register" class="btn btn-primary" target="blank" role="button">Registro</a>
             </div>
           </div>
         </div>
@@ -105,8 +105,8 @@
             <h3>CodeaProposals</h3>
             <p class="small-f">Proyecto de propuestas que integra vía twitter la oportunidad de sugerir y agregar a las celebridades o artistas favoritos a una base de datos que los cuenta como votos para la generación de listas de invitados en diferentes eventos,este servicio se utilizó como parte de talleres en TagCDMX, CampusParty y para CódigoX iniciativa de la presidencia de la Republica, enseñando a los asistentes a desarrollar a una aplicación cliente donde mandan propuestas a esta.</p>
             <div class="text-center">
-              <a href="https://codea-codigox.herokuapp.com/proposals" class="btn btn-info" role="button">Versión CódigoX</a>
-              <a href="https://codeatag.herokuapp.com/proposals" class="btn btn-info" role="button">Versión TagCDMX</a>
+              <a href="https://codea-codigox.herokuapp.com/proposals" class="btn btn-info" target="blank" role="button">Versión CódigoX</a>
+              <a href="https://codeatag.herokuapp.com/proposals" class="btn btn-info" target="blank" role="button">Versión TagCDMX</a>
             </div>
           </div>
         </div>
@@ -230,7 +230,7 @@
             <p class="small-f">Página de contacto para cliente, incluye conexión a Facebook para recibir Like o compartir la página</p>
           </div>
             <div class="text-center">
-              <a href="https://softwarenacho.github.io/mdma/" class="btn btn-info" role="button">MDMA</a>
+              <a href="https://softwarenacho.github.io/mdma/" class="btn btn-info" target="blank" role="button">MDMA</a>
             </div>
         </div>
       </div>
@@ -256,7 +256,7 @@
             <p class="small-f">Página web de presentación y contacto para cliente, cubre la necesidad de una productora músical de tener presencia web, información relevante, también logra recibir mensajes y demos a través de la página, así como compartir los últimos lanzamientos con la posibilidad de reproducirlos directamente sobre la aplicación.</p>
           </div>
             <div class="text-center">
-              <a href="http://www.futuregamemusic.com/" class="btn btn-info" role="button">Future game</a>
+              <a href="http://www.futuregamemusic.com/" class="btn btn-info" target="blank" role="button">Future game</a>
             </div>
         </div>
       </div>
