--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container-fluid">
   <!-- Header -->
-	<div class="row blue-bg navbar navbar-fixed-top">
+	<div class="row blue-bg navbar navbar-fixed-top tri-d">
 		<div class="col-sm-8 text-center">
       <img src="http://i.imgur.com/IxusUHq.png" style="margin: 0 auto;" alt="sotwarenacho" class="img-responsive" />
 		</div>
@@ -30,7 +30,7 @@
   <!-- About me -->
 	<div class="row" style="margin-top:150px;" id="about">
     <div class="class-md-12">
-      <h1 class="text-center blue-font ubuntu">Portafolio web de <b>Nacho Betancourt</b></h1>
+      <h1 class="text-center blue-font ubuntu tri-d">Portafolio web de <b>Nacho Betancourt</b></h1>
     </div>
 		<div class="col-md-9 text-right top" style="margin-top: 70px;">
       <p>Ingeniero en Desarrollo de Software titulado por el TecMilenio, apasionado por la enseñanza y difusión de la programación, he trabajado en contabilidad y construcción, pase por las carreras de Arquitectura e Ingeniería Civil, antes de encontrar en la programación mi verdadera pasión.</p>
@@ -39,7 +39,7 @@
       <p>También he trabajado con React, Python, PHP y Java, me considero un desarrolador Fullstack, me entusiasma el diseño de UI/UX pues considera la experiencia de un usuario uno de los elementos más importantes de mi carrera, trabajo también en planeación de proyectos y análisis de datos</p>
       <p>Me gustan los perros, la pizza, los camellones de la Ciudad de México, las playas de Veracruz, las carreteras y el viento en la cara, me gusta nadar y caminar, apoyo fielmente al <span class="codea-b">Cruz Azul</span>, leo libros y cómics, escucho música, pero para mi no hay nada como el placer de escribir y crear constantemente código.</p>
 		</div>
-		<div class="col-md-3 top goku">
+		<div class="col-md-3 top goku tri-d">
       <img src="http://res.cloudinary.com/hmaajhluc/image/upload/c_crop,h_479,w_479,x_0,y_0/v1483973328/82.jpg" alt="Nacho Betancourt" class="img-responsive round" style="height:200px;"/>
 		</div>
 	</div>
@@ -294,12 +294,12 @@
 
 	<div id="contact" class="row top">
 		<div class="col-md-4 col-md-offset-1 text-center" style="display: flex; flex-direction: column; justify-content: center;">
-      <img src="http://i.imgur.com/LpOmQeb.png?3" alt="work work work work work" class="img-responsive round" />
+      <img src="http://i.imgur.com/LpOmQeb.png?3" alt="work work work work work" class="img-responsive round tri-d" />
       <h7 class="codea-b" style="margin-top:25px;">"First solve the problem, then write the code"</h7>
       <h6 class="blue-font"  style="margin-top:15px;">Programada con <span class="fa fa-heart codea-y"></span> por Nacho Betancourt</h6>
 		</div>
 		<div class="col-md-5 col-md-offset-1 vertical-align">
-      <div class="jumbotron blue-bg contact text-center ubuntu">
+      <div class="jumbotron blue-bg contact text-center ubuntu tri-d">
         <h2>// Contacto</h2>
         <br /><br /><br />
         <div class="btn-group btn-group-sm">
