--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>Me gustan los perros, la pizza, los camellones de la Ciudad de México, las playas de Veracruz, las carreteras y el viento en la cara, me gusta nadar y caminar, apoyo fielmente al <span class="codea-b">Cruz Azul</span>, leo libros y cómics, escucho música, pero para mi no hay nada como el placer de escribir y crear constantemente código.</p>
 		</div>
 		<div class="col-md-3 top goku tri-d">
-      <img src="http://res.cloudinary.com/hmaajhluc/image/upload/c_crop,h_479,w_479,x_0,y_0/v1483973328/82.jpg" alt="Nacho Betancourt" class="img-responsive round" style="height:200px;"/>
+      		    <img src="https://i.ibb.co/ZXVJh78/waves.jpg" alt="Nacho Betancourt" class="img-responsive round" style="height:200px;"/>
 		</div>
 	</div>
 
